[package]
name = "pokemon"
version = "0.1.0"
authors = ["frank2@dc949.org"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pokemon"
path = "src/lib.rs"

[[bin]]
name = "pokemon-rs"
path = "src/bin.rs"

[dependencies]
